# tilestamp

./: .clang-format  CMakeLists.txt  LICENSE  README.md
resources/: example.json
src/: App.cpp  App.h  TilesheetDisplay.cpp  TilesheetDisplay.h  demo.cpp  main.cpp
